--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Student Placement Prediction</title>
+    <title>Diabetes Patient Prediction</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -41,7 +41,7 @@
 </head>
 <body>
     <div class="form-container">
-        <h2>Loan  Eligibility Prediction</h2>
+        <h2>Diabetes Prediction</h2>
         <form action="/predict" method="post">
             
             <label for="Pregnancies">Pregnancies :</label>
